<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorBackgroundGame"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="263dp"
        android:layout_height="386dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        tools:ignore="TextSizeCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="140dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="145dp"
                android:layout_height="140dp"
                android:layout_margin="0dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_foreground" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/menu_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif"
            android:text="@string/menu_start"
            android:textAlignment="center"
            android:textColor="?colorText"
            android:textSize="34sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/menu_new_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/menu_new_game"
            android:textAlignment="center"
            android:textColor="?colorText"
            android:textSize="34sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/menu_records"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/menu_records"
            android:textAlignment="center"
            android:textColor="?colorText"
            android:textSize="34sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/menu_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/menu_about"
            android:textAlignment="center"
            android:textColor="?colorText"
            android:textSize="34sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/menu_quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/menu_quit"
            android:textAlignment="center"
            android:textColor="?colorText"
            android:textSize="34sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>